css change to fix jumping :

--- a/src/styles/components/form-elements/styles.less
+++ b/src/styles/components/form-elements/styles.less
@@ -62,6 +62,14 @@
     bottom: 0.8rem;
     left: 100%;
     position: absolute;
+
+    &.error {
+      top: 40%;
+    }
+
+    &.no-error {
+      top: 54%;
+    }
   }
 
   .form-group-container-action-button-group {
